simple UI main menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">EthereumGasTracker</string>
     <string name="gas_cost">Gas Cost</string>
+    <string name="current_eth_price">"Current ETH price: "</string>
 </resources>
